# gelee

./: .gitignore  Dockerfile  Makefile  README.md  SECURITY.md  SUPPORT.md  baseline-bandit.json  gelee.ABOUT  mkdocs.yml  pyproject.toml  requirements.txt  sbom.json  sbom.json.sha256  setup.cfg  setup.py
docs/: SUMMARY.md  api.doc  api.md  book.toml  changes.md  index.md  install.md  test-coverage.md  usage.md  use.md
etc/: baseline-bandit.json  coverage-totals.json  git-stats.json  mkdocs.yml  monthly-downloads.json  packaging-facts.json
etc/sbom/: cdx.json  cdx.json.blake3  cdx.json.entropy  cdx.json.sha256  cdx.json.tlsh  spdx.json  spdx.json.blake3  spdx.json.entropy  spdx.json.sha256  spdx.json.tlsh  spdx.spdx  spdx.spdx.blake3  spdx.spdx.entropy  spdx.spdx.sha256  spdx.spdx.tlsh  spdx.yaml  spdx.yaml.blake3  spdx.yaml.entropy  spdx.yaml.sha256  spdx.yaml.tlsh
gelee/: __init__.py  __main__.py  cli.py  gelee.py
marmelade/: cli.py  marmelade.py
sbom/: cdx.json  cdx.json.blake3  cdx.json.entropy  cdx.json.sha256  cdx.json.tlsh  spdx.json  spdx.json.blake3  spdx.json.entropy  spdx.json.sha256  spdx.json.tlsh  spdx.spdx  spdx.spdx.blake3  spdx.spdx.entropy  spdx.spdx.sha256  spdx.spdx.tlsh  spdx.yaml  spdx.yaml.blake3  spdx.yaml.entropy  spdx.yaml.sha256  spdx.yaml.tlsh
test/: test_cli.py
test/fixtures/invalid/toml/: key_group_not_on_dedicated_line.toml
test/fixtures/invalid/yaml/: unexpected-dash.yaml  unexpected-dash.yml
test/fixtures/valid/csv/: simple.csv
test/fixtures/valid/ini/: single_section.ini
tests/: requirements-dev.txt  test_cli.py
tests/fixtures/invalid/ini/: duplicate_section.ini  missing_section_header.ini
tests/fixtures/toml/: simple.toml
tests/fixtures/xml/: plain.xml
tests/fixtures/yaml/: simple.yaml
